# ha-home-energy-advisor

./: .commitlintrc.json  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  hacs.json  package-lock.json  package.json  pyproject.toml  requirements_dev.txt  requirements_test.txt  sonar-project.properties
.github/workflows/: ci.yml
.husky/: pre-commit
custom_components/home_energy_advisor/: __init__.py  config_flow.py  const.py  coordinator.py  cycle_meter.py  diagnostics.py  discovery.py  integral_helper.py  issues.py  manifest.json  sensor.py  strings.json
custom_components/home_energy_advisor/engine/: __init__.py  accountant.py  allocation.py  battery_ledger.py  energy_source.py  interval_ledger.py
custom_components/home_energy_advisor/translations/: en.json  es.json
docs/: CRITICAL_INSTRUCTIONS.md  DOCUMENTATION_STANDARDS.md  PLAN.md  PRD.md  PRODUCT_CHARTER.md  TESTING_STANDARDS.md  VISION.md
docs/adr/: 0000-origin-of-the-idea.md  0001-native-home-assistant-integration.md  0002-cost-attribution-proportional-source-allocation.md  0003-entity-naming-for-cost-sensors.md  0004-energysource-taxonomy-and-native-helper-reuse.md  0005-energy-balance-decomposition.md  TEMPLATE.md
docs/notes/: AIRCON_COST_EXPLORATION.md  DEVICE_SENSOR_SURVEY.md  IMPLEMENTATION_IDEAS.md
scripts/: sonar-check.sh
tests/: conftest.py  test_config_flow.py  test_coordinator.py  test_cycle_meter.py  test_diagnostics.py  test_discovery.py  test_integral_helper.py  test_integration_skeleton.py  test_options_flow.py  test_sensor.py  test_subentry_flow.py
tests/engine/: test_accountant.py  test_allocation.py  test_battery_ledger.py  test_cumulative_energy_source.py  test_golden_master_exploration.py  test_interval_ledger.py
